# terminal-plus

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
e2e/: cucumber.js  tsconfig.json
e2e/features/: git-panel.feature  shortcuts.feature  terminal-io.feature  themes.feature  tiling.feature
e2e/steps/: common.steps.ts  git-panel.steps.ts  shortcuts.steps.ts  terminal-io.steps.ts  themes.steps.ts  tiling.steps.ts
e2e/support/: hooks.ts  selectors.ts  tauri-mock.ts  world.ts
e2e/support/fixtures/: git-diff.ts  git-log.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/git/: commands.rs  diff.rs  log.rs  mod.rs  types.rs
src-tauri/src/pty/: commands.rs  manager.rs  mod.rs  session.rs  shell_integration.bash  shell_integration.zsh
src/components/: WelcomeScreen.tsx
src/components/git/: DiffView.tsx  (+7 more)
src/lib/: editorActions.ts  gitGraphLayout.ts  highlight.ts  ipc.ts  keybindings.ts  terminalRegistry.ts  themeApplicator.ts  themes.ts  tileTree.ts
src/stores/: gitStore.ts  markdownStore.ts  terminalStore.ts  themeStore.ts  tileStore.ts
src/styles/: git-panel.css  highlight.css  markdown.css  search.css  settings.css  terminal.css  tiling.css  variables.css
src/test/: diffView.test.tsx  editorActions.test.ts  gitStore.test.ts  highlight.test.ts  setup.ts  theme.test.tsx
src/types/: git.ts  terminal.ts  theme.ts  tile.ts
(+12 files in other folders)
