[package]
name = "terminal-plus"
version = "0.1.0"
edition = "2021"

[lib]
name = "terminal_plus_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
parking_lot = "0.12"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
